[package]
name = "chasket-compiler"
version = "0.1.0"
edition = "2021"
description = "Chasket template language compiler - compiles .csk files to native Web Components"
license = "MIT"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "chasketc"
path = "src/main.rs"

[lib]
name = "chasket_compiler"
path = "src/lib.rs"
